...
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cse110.flashbackmusicplayer.TrackDisplayActivity"
    tools:showIn="@layout/activity_current_track_display">

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abhaya_libre_bold"
        android:gravity="center"
        android:textColor="@android:color/background_light"
...
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitle" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/backwhite"
        android:fontFamily="@font/abhaya_libre_bold"
...
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:alpha="0.7"
        android:background="@drawable/pausewhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slideTrack" />


    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="200dp"
        android:layout_height="200dp"
...
        android:layout_marginTop="20dp"
        android:background="@drawable/neutralwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abhaya_libre_bold"
...
