<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- Defining where should text be placed. You set you text color here-->
    <TextView
        android:id="@+id/list_content"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="sample"
        android:fontFamily="@font/abhaya_libre_bold"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textSize="20dp"
        />
</LinearLayout>
